# nfl-games-api

./: .env  .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  dockerfile
src/: handlers.rs  main.rs  models.rs  rate_limiter.rs
