[package]
name = "nfl-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tower-http = { version = "0.4", features = ["cors"] }
dotenvy = "0.15"
redis = { version = "0.23", features = ["tokio-comp"] }
chrono = "0.4"